--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -395,3 +395,7 @@ button.mat-focus-indicator.searchfield.mat-menu-item {
 .example-sidenav-content button {
     padding: 0;
 }
+
+section.amazonheader.amazonheader3 .logo .menus {
+    padding: 0 1pc;
+}
